--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <span class="sub-heading">The World of Generative AI</span>
   </header>
   <nav>
-      <a href="main.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="contact.html">Contact</a>
       <a href="about.html">About</a>
   </nav>
