--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <img src="photo20.jpg" alt="Photo 20" onclick="showImage('photo20.jpg')">
       <img src="photo21.jpg" alt="Photo 21" onclick="showImage('photo21.jpg')">
       <img src="photo22.jpg" alt="Photo 22" onclick="showImage('photo22.jpg')">
+      <img src="photo23.jpg" alt="photo 23" onclick=showImage('photo23.jpg')">
     </div>
   </div> 
   <div>
